server/kubernetes/housing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: housing-service
spec:
  selector:
    app: housing
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: housing-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: housing
  template:
    metadata:
      labels:
        app: housing
    spec:
      containers:
        - name: housing-service
          image: aureldp/housing-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always
