server/kubernetes/rental-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rental-service
spec:
  selector:
    app: rental
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rental-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rental
  template:
    metadata:
      labels:
        app: rental
    spec:
      containers:
        - name: rental-service
          image: aureldp/rental-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
      restartPolicy: Always
