server/kubernetes/reservation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservation-service
spec:
  selector:
    app: reservation
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation
  template:
    metadata:
      labels:
        app: reservation
    spec:
      containers:
        - name: reservation-service
          image: aureldp/reservation-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
      restartPolicy: Always
