server/kubernetes/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: localoge-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: localoge-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - localoge-gateway
  http:
    - match:
        - uri:
            prefix: /housing/
      rewrite:
        uri: /
      headers:
        request:
          add:
            X-Forwarded-Prefix: /housing
        response:
          add:
            X-Forwarded-Prefix: /housing
      route:
        - destination:
            host: housing-service.default.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /rental/
      rewrite:
        uri: /
      headers:
        request:
          add:
            X-Forwarded-Prefix: /rental
        response:
          add:
            X-Forwarded-Prefix: /rental
      route:
        - destination:
            host: rental-service.default.svc.cluster.local
            port:
              number: 8081
    - match:
        - uri:
            prefix: /reservation/
      rewrite:
        uri: /
      headers:
        request:
          add:
            X-Forwarded-Prefix: /reservation
        response:
          add:
            X-Forwarded-Prefix: /reservation
      route:
        - destination:
            host: reservation-service.default.svc.cluster.local
            port:
              number: 8082
